tests/ui/cve_2020_35907/cve_2020_35907.regular.stderr
error: it is unsound to expose a `&'static std::task::Waker` from a thread-local where `std::task::Waker` is `Sync`
  --> tests/ui/cve_2020_35907/cve_2020_35907.rs:26:28
   |
LL | pub fn noop_waker_ref() -> &'static Waker {
   |                            ^^^^^^^^^^^^^^ function returning `&'static std::task::Waker` here
...
LL |     NOOP_WAKER_INSTANCE.with(|l| unsafe { &*l.get() })
   |     --------------------------------------------------
   |     |
   |     thread local used here
   |     `&'static std::task::Waker` returned here
   |
   = help: `std::task::Waker` is `Sync` so that it can shared among threads
   = help: the thread local is destroyed after the thread has been destroyed, and the exposed `&'static std::task::Waker` may outlive the thread it is exposed to
   = note: `#[deny(rpl::thread_local_static_ref)]` on by default

error: aborting due to 1 previous error

